test_programs/compile_failure/noirc_frontend_tests_cannot_call_unconstrained_function_outside_of_unsafe/src/main.nr

    fn main() {
        foo();
    }

    unconstrained fn foo() {}
    